// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model User {
  id             String    @id @default(cuid())
  name           String
  email          String
  country        String
  city           String
  post_code      String
  street_address String
  Invoice        Invoice[]
}

model Invoice {
  id                    String        @id @default(cuid())
  description           String
  invoice_start_date    DateTime
  invoice_due           DateTime
  status                InvoiceStatus @default(Draft)
  client_name           String
  client_email          String
  client_country        String
  client_cit            String
  client_posty_code     String
  client_street_address String
  items                 InvoiceItem[]
  user_id               String
  User                  User          @relation(fields: [user_id], references: [id])

}

model InvoiceItem {
  id         String  @id @default(cuid())
  name       String
  price      Int
  total      Int
  invoice_id String
  Invoice    Invoice @relation(fields: [invoice_id], references: [id])
}

enum InvoiceStatus {
  Draft
  Pending
  Pai
}
