//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  name String [not null]
  email String [not null]
  country String [not null]
  city String [not null]
  post_code String [not null]
  street_address String [not null]
  Invoice Invoice [not null]
}

Table Invoice {
  id String [pk]
  description String [not null]
  invoice_start_date DateTime [not null]
  invoice_due DateTime [not null]
  status InvoiceStatus [not null, default: 'Draft']
  client_name String [not null]
  client_email String [not null]
  client_country String [not null]
  client_cit String [not null]
  client_posty_code String [not null]
  client_street_address String [not null]
  items InvoiceItem [not null]
  user_id String [not null]
  User User [not null]
}

Table InvoiceItem {
  id String [pk]
  name String [not null]
  price Int [not null]
  total Int [not null]
  invoice_id String [not null]
  Invoice Invoice [not null]
}

Enum InvoiceStatus {
  Draft
  Pending
  Pai
}

Ref: Invoice.user_id > User.id

Ref: InvoiceItem.invoice_id > Invoice.id